feat: fix description and refactoring